Fix #11: Too much vertical space between menu items in the space browser

--- a/themes/clean-base/less/humhub/topbar.less
+++ b/themes/clean-base/less/humhub/topbar.less
@@ -100,17 +100,6 @@
       margin-left: 13px;
     }
 
-    // Reduce dropdown menu spacings
-    .dropdown-menu > li > {
-      a {
-        padding: 8px 15px;
-      }
-
-      hr {
-        margin: 8px 25% 8px 10px;
-      }
-    }
-
     .nav > li > a:hover,
     .nav > .open > a {
       background-color: @background-color-secondary;
@@ -119,9 +108,6 @@
 
     .nav > .account {
       height: @topBarHeight;
-
-      img {
-      }
 
       .dropdown-toggle {
         padding: 8px 0 5px 5px;
